openshift/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fourbull-service
  namespace: fourbull
  labels:
    app: fourbull
spec:
  selector:
    app: fourbull
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
